# GDMan

./: .gitignore  Makefile.am  configure.ac
data/ui/: Makefile.am  main.ui
src/: Makefile.am  download-group.c  download-group.h  download.c  download.h  http-download.c  http-download.h  manager.c  manager.h  manager.xml  megaupload-download.c  megaupload-download.h  megaupload-manager.c  megaupload-manager.h  org.gnome.GDMan.service.in  shell.c  shell.h  youtube-download.c  youtube-download.h  youtube-manager.c  youtube-manager.h
